# Image-Matching-2D-3D

./: .flake8  .gitignore  COLMAP_FIX_SUMMARY.md  CONTRIBUTING.md  FIX_SUMMARY.md  IMAGE_MATCHER_README.md  LICENSE  QUICKSTART.md  README.md  THEORY.md  analyze_matches.py  check_database.py  check_point3d_api.py  check_pycolmap.py  check_pycolmap_api.py  check_results.py  convert_colmap_to_bin.py  debug_and_visualize.py  debug_full_pipeline.py  debug_mapper_options.py  debug_matching.py  debug_nested_options.py  debugging_summary.md  export_to_ply.py  image_matcher.py  imc-2023-loftr-superglue-2stage.ipynb  imc_vs_vision3d_analysis.md  kaggle-colmap.py  kaggle-notebook.ipynb  kaggle-py.py  pyproject.toml  reconstruct.py  reconstruction.npz  requirements.txt  setup.py  simple_reconstruction_test.py  test_colmap_direct.py  test_fast.py  test_fix_simple.py  test_imc_upgrades.py  (+26 more)
debug_full_output/: direct_match_data.json  reconstruction_result.json
debug_output/: debug_summary.json
debug_output/no_tta/: match_statistics.json
debug_visualizations/: reconstruction_summary.json
docs/: ARCHITECTURE.md
examples/: advanced_matching.py  basic_reconstruction.py  beginner_tutorial.py  tutorial.ipynb
featureout/colmap_reconstruction/: model_0_stats.txt
featureout/colmap_reconstruction/model_0/: cameras.txt  frames.txt  images.txt  points3D.txt  rigs.txt  stats.txt
featureout/colmap_reconstruction/model_1/: frames.txt  images.txt  points3D.txt  rigs.txt  stats.txt
vision3d/: __init__.py
vision3d/core/: __init__.py  feature_extraction.py  pipeline.py  reconstruction.py
vision3d/models/: __init__.py  base.py  loftr.py  multi_method_matcher.py  superglue.py  superglue_matcher.py
vision3d/scripts/: __init__.py
vision3d/utils/: __init__.py  colmap_interface.py  colmap_interface_fixed.py  image_pairs.py  io.py  visualization.py
